--- a/language/en.xml
+++ b/language/en.xml
@@ -1,7 +1,12 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <language xmlns="http://www.woltlab.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.woltlab.com http://www.woltlab.com/XSD/maelstrom/language.xsd" languagecode="en" languagename="English" countrycode="gb">
 	<category name="wcf.acp.group">
 		<item name="wcf.acp.group.option.category.user.community"><![CDATA[Community]]></item>
 		<item name="wcf.acp.group.option.user.community.canReport"><![CDATA[Can report contents]]></item>
+		<item name="wcf.acp.group.option.user.community.reportLimit"><![CDATA[Daily report Limit]]></item>
+		<item name="wcf.acp.group.option.user.community.reportLimit.description"><![CDATA[The daily limitation of reports, submitted by members of this group. [-1 for infinite]]]></item>
+	</category>
+	<category name="wcf.global">
+		<item name="wcf.global.error.reportLimitReached"><![CDATA[Your daily report limitation was reached.]]></item>
 	</category>
 </language>
